# community

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  start.bat  start.sh
.kiro/specs/info-hunter/: design.md  requirements.md  tasks.md
Client/: .gitignore
Client/app/: globals.css  layout.tsx  page.tsx
Client/app/badges/: page.tsx
Client/app/dashboard/: page.tsx
Client/app/events/: page.tsx
Client/app/leaderboard/: page.tsx
Client/app/profile/: page.tsx
Client/app/projects/: page.tsx
Client/app/teams/: page.tsx
Client/components/: event-card.tsx  features-section.tsx  footer.tsx  hero-section.tsx  navbar.tsx  project-card.tsx  team-card.tsx
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.jsx
client/src/components/: FAQ.jsx  Footer.jsx  Gallery.jsx  Hero.jsx  Judges.jsx  Navigation.jsx  Objectives.jsx  Prizes.jsx  Register.jsx  Schedule.jsx  Sponsors.jsx
client/src/hooks/: useCountdown.js  useCursor.js  useCyberGrid.js  useMatrixRain.js  useParticles.js  (+1 more)
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
server/: .env.example  .gitignore  README.md  package-lock.json  package.json  server.js
server/src/: index.ts
src/info_hunter/: __init__.py
src/info_hunter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_api.py  test_document.py  test_manager.py  test_scheduler.py  test_storage.py  test_validation.py
(+61 files in other folders)
